# task-manager-web-backend

./: Development scheme.xmind  README.md  TODO  justfile  main.py  pyproject.toml
src/config/: settings.py
