[project]
name = "task-manager-web-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "ruff>=0.15.4",
]
